// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress measure location inside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="inside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location inside and small should render large 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="large-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location none 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="none-progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location outside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-outside pf-m-singleline"
    id="outside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location top 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="top-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size lg 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-lg pf-m-singleline"
    id="lg-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size md 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="md-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size sm 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-sm pf-m-singleline"
    id="sm-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant danger 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-danger pf-m-singleline"
    id="danger-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant success 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-success pf-m-singleline"
    id="success-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant warning 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-warning pf-m-singleline"
    id="warning-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress with aria-valuetext 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-aria-valuetext"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      aria-valuetext="Descriptive text here"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Simple progress 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-simple-example"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`additional label 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="additional-label"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        Additional label
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no value specified 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="no-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value higher than maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="higher-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        100%
      </span>
    </div>
    <div
      aria-valuemax="60"
      aria-valuemin="0"
      aria-valuenow="77"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 100%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value lower than minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="lower-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="40"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled between minValue and maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-range-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        57%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 57%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        62%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="0"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 62%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        44%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 44%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
